--- a/executor/Dockerfile
+++ b/executor/Dockerfile
@@ -4,6 +4,7 @@ FROM python:3.9-slim
 RUN apt-get update && apt-get install -y --no-install-recommends \
     build-essential \
     bash \
+    ffmpeg \
     && rm -rf /var/lib/apt/lists/*
 
 # Create and activate a virtual environment
