--- a/executor/Dockerfile
+++ b/executor/Dockerfile
@@ -1,20 +1,16 @@
 FROM python:3.9-slim
 
-# Install system dependencies and bash
 RUN apt-get update && apt-get install -y --no-install-recommends \
     build-essential \
     bash \
-    ffmpeg \
     && rm -rf /var/lib/apt/lists/*
 
-# Create and activate a virtual environment
 RUN python -m venv /venv
 ENV PATH="/venv/bin:$PATH"
 
-# Install common dependencies (always present)
-RUN pip install --no-cache-dir pandas matplotlib openpyxl
+# Install common data science libraries in the base image. Less rebuilds for common tasks.
+RUN pip install --no-cache-dir pandas matplotlib numpy seaborn scikit-learn requests
 
 WORKDIR /app
 
-# Activate the virtual environment and then run the script
 CMD ["/bin/bash", "-c", "source /venv/bin/activate && python script.py"]
